--- a/projeto_porto_vocacao.html
+++ b/projeto_porto_vocacao.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory-cardgame</title>
     <!-- favicon -->
-     <link rel="shortcut icon" href="./img/favicon.png" type="image">
-    <link rel="stylesheet" href="./css/style.css">
+     <link rel="shortcut icon" href="favicon.png" type="image">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
@@ -26,6 +26,6 @@
         </footer>
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
