--- a/day_night.html
+++ b/day_night.html
@@ -6,7 +6,7 @@
     <title>gustavo guilherme_day_night</title>
     <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" 
-    href="https://fonts.gppgleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" />
     <style>
         :root{ 
             --fundo-claro:#fff;
@@ -122,4 +122,5 @@
         defineCurrentTheme(themeSystem);
 
     </script>
+
 </html>
